--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,15 @@ body{
  background-repeat:no-repeat;
  padding:0;
  margin:0;
- background-image:url(http://www.mrwallpaper.com/wallpapers/space-nebula-stars-1366x768.jpg);
+ background-image:url(http://www.wallpedes.com/resize/1280x1024/deep/deep-blue-space-iphone-wallpaper-wallpaper-deep-space-iphone-blue-color-garry-kasparov.jpg);
+}
+h1{
+	text-align: center;
+ font-family: 'Ubuntu Condensed', sans-serif;
+ border:5px double orange; 
+ padding:5px;
+ color: lime;
+  background-image:url(http://en.spaceengine.org/_ph/3/82685745.jpg);
 }
 nav a{
 	font-family: 'Ubuntu Condensed', sans-serif;
