--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
  background-repeat:no-repeat;
  padding:0;
  margin:0;
- background-image:url(http://4.bp.blogspot.com/-RJDk5SF8tmQ/TniLINkhCOI/AAAAAAAAA_E/UaC9pSSfVYM/s1600/cool_3d_space_wallpapers+3.jpg);
+ background-image:url(http://img.wallpaperstock.net:81/outer-space-wallpapers_33924_1920x1080.jpg);
 }
 style{
   text-align: center;
@@ -15,8 +15,8 @@ h1{
  font-family: 'Ubuntu Condensed', sans-serif;
  border:5px double orange; 
  padding:5px;
- color: lime;
-  background-image:url(http://en.spaceengine.org/_ph/3/82685745.jpg);
+ color: black;
+  background-image:url(http://best-wallpaper.net/wallpaper/1920x1080/1107/Starry-space_1920x1080.jpg);
 }
 nav a{
   font-family: 'Ubuntu Condensed', sans-serif;
