--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body{
 }
 div{
   position: relative;
-  margin: 0;
-  padding: 0;
+  margin: 8px;
+  padding: 0px;
   color: orange;
   font-family: 'Ubuntu Condensed', sans-serif;
   text-align: center;
