all of the files i forgot to push.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
  background-repeat:no-repeat;
  padding:0;
  margin:0;
- background-image:url(http://www.iwallpapersfive.com/wp-content/uploads/2013/12/space-wallpaper-1920x1080-nebula-cyan-space-nebula-wallpaper.jpg);
+ background-image:url(http://altafun.com/wp-content/uploads/2014/06/bull-nebula-taurus-1920x1080.jpg);
 }
 div{
   position: relative;
