edited some code to text move to the left

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@ div{
   padding: 0px;
   color: #F75814;
   font-family: 'Ubuntu Condensed', sans-serif;
-  text-align: center;
+  text-align: left;
 }
 h1 {
  text-align: center;
