--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 .readmore-js-toggle, .readmore-js-section {
   display: block;
   width: 100%;
+  height: 20%;
 }
 .readmore-js-section {
   overflow: hidden;
+  overflow: inherit;
 }
